# routes/medical_report.js
@@ -5,7 +5,9 @@ module.exports = app => {
      * Web routes
      */
     app.put('/report/p/edit/:_id', authenticate, authorize(['ADMIN']), medicalReportControl.editReport);
-
+    app.get('/report/p/get_infected', authenticate, authorize(['ADMIN']), medicalReportControl.infectedPeople);
+    app.get('/report/p/list_all', authenticate, authorize(['ADMIN']), medicalReportControl.listAllReport);
+    app.post('/report/p/search_filter', authenticate, authorize(['ADMIN']), medicalReportControl.filter);
     /**
      * Mobile routes
      */
